Changed use of valueOf to new constructor so that this will compile in Java 1.4 as well as in Java 1.5